feat(update): switch to vite and update pocketbase to 0.14
Signed-off-by: Karsten Siemer <karsten.siemer@sda.se>

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ node_modules
 .env.*
 !.env.example
 
-pocketbase
+pocketbase/pocketbase
 
 ########################################################################################################
 # IntelliJ Idea
