--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-	"name": "ChatApp",
-	"version": "0.0.2",
+	"name": "web",
+	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"backend": "./pocketbase/pocketbase serve",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
@@ -12,26 +11,30 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.31.2",
-		"@sveltejs/adapter-auto": "^1.0.3",
-		"@sveltejs/kit": "^1.12.0",
-		"autoprefixer": "^10.4.14",
-		"daisyui": "^2.51.4",
-		"eslint": "^8.36.0",
-		"eslint-config-prettier": "^8.7.0",
+		"@playwright/test": "1.25.0",
+		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/kit": "next",
+		"autoprefixer": "^10.4.7",
+		"daisyui": "^2.39.0",
+		"eslint": "^8.16.0",
+		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"postcss": "^8.4.21",
+		"object-to-formdata": "^4.4.2",
+		"postcss": "^8.4.14",
 		"postcss-load-config": "^4.0.1",
-		"prettier": "^2.8.4",
-		"prettier-plugin-svelte": "^2.9.0",
-		"svelte": "^3.57.0",
-		"svelte-icons": "^2.1.0",
+		"prettier": "^2.6.2",
+		"prettier-plugin-svelte": "^2.7.0",
+		"svelte": "^3.44.0",
+		"svelte-french-toast": "^1.0.3",
+		"svelte-hero-icons": "^4.1.3",
 		"svelte-preprocess": "^4.10.7",
-		"tailwindcss": "^3.2.7",
-		"vite": "^4.2.0"
+		"tailwindcss": "^3.1.5",
+		"vite": "^3.1.0",
+		"zod": "^3.19.1"
 	},
 	"type": "module",
 	"dependencies": {
-		"pocketbase": "^0.12.1"
+		"pocketbase": "^0.8.0-rc2",
+		"svelte-icons": "^2.1.0"
 	}
 }
