--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "web",
+	"name": "ChatApp",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -12,29 +12,29 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "1.25.0",
-		"@sveltejs/adapter-auto": "next",
-		"@sveltejs/kit": "next",
-		"autoprefixer": "^10.4.7",
-		"daisyui": "^2.39.0",
-		"eslint": "^8.16.0",
-		"eslint-config-prettier": "^8.3.0",
+		"@sveltejs/adapter-auto": "^1.0.0-next.91",
+		"@sveltejs/kit": "^1.0.0-next.589",
+		"autoprefixer": "^10.4.14",
+		"daisyui": "^2.51.5",
+		"eslint": "^8.37.0",
+		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"object-to-formdata": "^4.4.2",
-		"postcss": "^8.4.14",
+		"postcss": "^8.4.21",
 		"postcss-load-config": "^4.0.1",
-		"prettier": "^2.6.2",
-		"prettier-plugin-svelte": "^2.7.0",
-		"svelte": "^3.44.0",
+		"prettier": "^2.8.7",
+		"prettier-plugin-svelte": "^2.10.0",
+		"svelte": "^3.57.0",
 		"svelte-french-toast": "^1.0.3",
 		"svelte-hero-icons": "^4.1.3",
 		"svelte-preprocess": "^4.10.7",
-		"tailwindcss": "^3.1.5",
-		"vite": "^3.1.0",
-		"zod": "^3.19.1"
+		"tailwindcss": "^3.3.0",
+		"vite": "^4.2.1",
+		"zod": "^3.21.4"
 	},
 	"type": "module",
 	"dependencies": {
-		"pocketbase": "^0.8.0-rc2",
+		"pocketbase": "^0.8.4",
 		"svelte-icons": "^2.1.0"
 	}
 }
