--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
 	},
 	"devDependencies": {
 		"@playwright/test": "1.25.0",
-		"@sveltejs/adapter-auto": "^1.0.0-next.91",
-		"@sveltejs/kit": "^1.0.0-next.589",
+		"@sveltejs/adapter-auto": "^1.0.3",
+		"@sveltejs/kit": "^1.15.4",
 		"autoprefixer": "^10.4.14",
 		"daisyui": "^2.51.5",
-		"eslint": "^8.37.0",
+		"eslint": "^8.38.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"object-to-formdata": "^4.4.2",
@@ -25,17 +25,18 @@
 		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.7",
 		"prettier-plugin-svelte": "^2.10.0",
-		"svelte": "^3.57.0",
+		"svelte": "^3.58.0",
 		"svelte-french-toast": "^1.0.3",
 		"svelte-hero-icons": "^4.1.3",
 		"svelte-preprocess": "^4.10.7",
-		"tailwindcss": "^3.3.0",
+		"tailwindcss": "^3.3.1",
 		"vite": "^4.2.1",
 		"zod": "^3.21.4"
 	},
 	"type": "module",
 	"dependencies": {
-		"pocketbase": "^0.8.4",
+		"eventsource": "^2.0.2",
+		"pocketbase": "^0.13.1",
 		"svelte-icons": "^2.1.0"
 	}
 }
