search bar is working fine, now starting with chat opening, group add after click on chat or group

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"backend": "./pocketbase/pocketbase serve",
-		"dev": "vite dev",
+		"dev": "vite --debug dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"test": "playwright test",
